--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,68 @@
     transform: rotate(360deg);
   }
 }
+
+.comics__container{
+  margin: 48px 0;
+  display: flex;
+  gap: 40px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.comics__container--item{
+  box-sizing: border-box;
+  flex-basis: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-height: 450px;
+  padding: 10px;
+  gap: 10px;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.comics__container--item:hover{
+  box-shadow: 0px 0px 13px -7px #000000, 3px 3px 13px 7px rgba(0,0,0,0.3);
+}
+
+.comics__title--container p{
+  margin: 0;
+  font-weight: 500;
+}
+
+.comics__title--description{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  line-height: 1.3em;
+  height: 3.9em;
+}
+
+.comics__title--description p{
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.comics__img{
+  max-height: 250px;
+  max-width: 140px;
+}
+
+.loading__bar{
+  margin-top: 128px;
+}
+
+.container__pagination{
+  margin: 36px auto;
+  width: max-content;
+}
+
+.container__input{
+  margin-top: 48px;
+  display: flex;
+  gap: 15px;
+}
